test/tests/operators/parallel/error_source_bytes.txt
error: this operator was not ported yet
 --> tests/operators/parallel/error_source_bytes.tql:5:19
  |
5 | parallel jobs=2 { load_file "/dev/null" }
  |                   ^^^^^^^^^ 
  |
